--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -8,13 +8,13 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         x:Name="CmdPanelWindow"
-        Title="命令面板" Height="358.667" Width="431.999" Loaded="Window_Loaded">
+        Title="命令面板" Height="358" Width="431.999" Loaded="Window_Loaded">
     <Grid x:Name="grid" Height="323" VerticalAlignment="Top" Background="White">
         <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" ClipToBounds="False"
-                Background="White" >
-            <Canvas x:Name="parampanel" Panel.ZIndex="10" Visibility="Collapsed" 
+                Background="White" Margin="0,0,0,-35" >
+            <Canvas x:Name="parampanel" Panel.ZIndex="10" Visibility="Visible" 
                     Background="White"
-                    Width="247" Height="277"
+                    Width="247" Height="323"
                         Canvas.Left="143" Canvas.Top="15">
                 <Canvas.Effect>
                     <DropShadowEffect ShadowDepth="5" BlurRadius="5"/>
@@ -81,10 +81,10 @@
             </Canvas>
 
             <Button x:Name="getstatusbtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Canvas.Left="335" Canvas.Top="234" Visibility="Collapsed"/>
-            <GroupBox Header="菜单" Canvas.Left="24" Canvas.Top="15" Height="277" ClipToBounds="False">
+            <GroupBox Header="菜单" Canvas.Left="24" Canvas.Top="15" Height="323" ClipToBounds="False">
                 <StackPanel x:Name="buttoncontainerstp" Width="104" 
                         Background="Transparent"
-                        MouseLeftButtonDown="buttoncontainerstp_MouseLeftButtonDown" Canvas.Left="66" Canvas.Top="60" Margin="0,0,0,14">
+                        MouseLeftButtonDown="buttoncontainerstp_MouseLeftButtonDown" Canvas.Left="66" Canvas.Top="60" Margin="0,0,0,-3">
                     <Button x:Name="pm1" FontSize="12" Content="测量 >" Height="30" Width="70" HorizontalAlignment="Left" MouseEnter="pm1_MouseEnter" Click="pm1_Click" >
                     </Button>
                     <Button x:Name="m11" FontSize="12" Content="取样" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m11_Click"></Button>
@@ -97,14 +97,15 @@
                     <Button x:Name="pm3" FontSize="12" Content="校准"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm3_Click"></Button>
                     <Button x:Name="pm4" FontSize="12" Content="通信"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm4_Click"></Button>
                     <Button x:Name="pm5" FontSize="12" Content="液体测量>"  Height="30" Width="70" HorizontalAlignment="Left" MouseEnter="pm5_MouseEnter" Click="pm5_Click"/>
-                    <Button x:Name="m51" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m51_Click"></Button>
+                    <Button x:Name="m51" FontSize="12" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="21,2,0,0" Visibility="Collapsed" Click="m51_Click"></Button>
                     <Button x:Name="m52" FontSize="12" Content="测量" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m52_Click" ></Button>
+                    <Button x:Name="m54" FontSize="12" Content="保存" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m54_Click" ></Button>
                     <Button x:Name="m53" FontSize="12" Content="返回上一级" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m53_Click"></Button>
                     <Button x:Name="pm6" FontSize="12" Content="参数设置"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm6_Click"></Button>
                     <Button x:Name="pm7" FontSize="12" Content="状态获取"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm7_Click"></Button>
                 </StackPanel>
             </GroupBox>
-            <Canvas Height="277" Canvas.Left="143" Canvas.Top="15" Width="247"
+            <Canvas Height="323" Canvas.Left="143" Canvas.Top="15" Width="247"
                        Background="White"
                    >
                 <Canvas.Effect>
